client/src/Components/styles.css
html {
  overflow: hidden;
}

.logo {
  display: none;
}

@media only screen and (min-width: 768px) {
  .logo {
    display: block;
  }
}

.react-calendar {
  width: 35em;
  color: #d10056;
  font-size: 19px;
  text-transform: uppercase;
  border-color: #d10056;
  border-width: 0.2em;
}

.extension-input {
  text-align: center;
  font-size: 30px;
}

.navbar-container {
  width: 100%;
}

.model-CPR-content {
  padding-top: 5vw;
  color: white;
  font-size: 19.5px;
  text-align: left;
}

.CPR-active {
  cursor: pointer;
}

.delete {
  cursor: pointer;
}

.homepage-option-style:hover {
  cursor: pointer;
  width: 100%;
}

.law-icon {
  align-items: center;
}

